Fix footer overlap issue

--- a/web/public/stylesheets/scaffold.css
+++ b/web/public/stylesheets/scaffold.css
@@ -77,6 +77,7 @@ a:hover { color: #fff; background-color:#000; }
 #main {
     height: auto !important;
     margin: 1em;
+    padding-bottom: 1.4em;
 }
 
 #footer {
